--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CNN=mongodb+srv://jorger01:Merlincillo921.@cluster0.gs0ud.mongodb.net/hospitaldb
+JWT_SECRET=hgujro9485-&%,·$$fiuefnieu´30203j9fr3
