--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 DB_CNN=mongodb+srv://jorger01:Merlincillo921.@cluster0.gs0ud.mongodb.net/hospitaldb
 JWT_SECRET=hgujro9485-&%,·$$fiuefnieu´30203j9fr3
+GOOGLE_ID=500794568535-i0fdsq22ant5f84ngdpbbbqdc1o2j03o.apps.googleusercontent.com
+GOOGLE_SECRET=29aMQdOktXDJ7wT1txEpFwin
